--- a/.gitignore
+++ b/.gitignore
@@ -6,17 +6,17 @@
 *.user
 *.sln.docstates
 
-# Build results
+## Build results
 [Dd]ebug/
 [Dd]ebugPublic/
-[Rr]elease/
-[Rr]eleases/
-x64/
-x86/
-build/
-bld/
-[Bb]in/
-[Oo]bj/
+#[Rr]elease/
+#[Rr]eleases/
+#x64/
+#x86/
+#build/
+#bld/
+#[Bb]in/
+#[Oo]bj/
 
 # Roslyn cache directories
 *.ide/
